<resources>
    <string name="app_name">hisync</string>
    <string name="login_subtitle">Band practice, in sync.</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="hint_email">you@email.com</string>
    <string name="hint_password">Min. 6 characters</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_google">Continue with Google</string>
    <string name="or_continue_with">or continue with</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="default_web_client_id">986167380653-n9f0lprcu9uomib7njc5ocjjlh5lauh5.apps.googleusercontent.com</string>
</resources>